fix: hide intro2d text to prevent overlap, rename ANIMACIONES 3D to 3D

--- a/src/index.css
+++ b/src/index.css
@@ -206,7 +206,7 @@ body {
   }
 
   #intro-2d {
-    @apply relative;
+    @apply relative min-h-screen;
 
     .media {
       @apply relative lg:overflow-hidden;
@@ -232,12 +232,12 @@ body {
     }
 
     .content {
-      @apply relative z-10 my-5 mb-20 lg:-mt-40 font-semibold text-xl lg:opacity-0 text-center;
+      @apply relative z-10 my-5 mb-20 lg:-mt-40 font-semibold text-xl text-center;
       background-color: #FFF5F7;
       color: #888;
 
       .wrapper {
-        @apply container mx-auto px-5 pb-20 2xl:px-0;
+        @apply container mx-auto px-5 pb-20 2xl:px-0 opacity-0;
       }
 
       h2 {
